sumo/tests/traci/VariableRetrieval/InductionLoop/errors/UnknownIL/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:28:43 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=160 varID=16 objID=xxx
.. Answered with error to command (160), [description: Induction loop 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
